_lib/applications/homer/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
    app.kubernetes.io/instance: homer-${ENVIRONMENT}
    app.kubernetes.io/version: "${HOMER_VERSION}"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: homer
    node: worker
