_lib/applications/homer/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-internal
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
    app.kubernetes.io/instance: homer-${ENVIRONMENT}
    environment: "${ENVIRONMENT}"
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: networking
  hostnames:
    - "${HOMER_SUBDOMAIN}.th0th.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homer
          port: 8080
